Fix a bug related to overflow & the grade tables

--- a/progressinator/css/progressinator.css
+++ b/progressinator/css/progressinator.css
@@ -115,7 +115,7 @@
 
   .grade-statuses-scroll,
   .assessment-statuses-scroll {
-    overflow: hidden;
+    overflow: visible;
   }
 
 }
